--- a/index.html
+++ b/index.html
@@ -62,13 +62,24 @@
 
         <section class="about-me" id="about-me">
           <h3>Sobre mim</h3>
-          <p>Sou desenvolvedor Java com 6 meses de experiência e estudante de Ciência da Computação. Durante minha jornada, participei de maratonas de programação, onde desenvolvi fortes habilidades em algoritmos. Concluí diversos projetos de diferentes níveis de complexidade, que você pode ver abaixo. Além disso, sou formado em um curso técnico de Automação Industrial.</p>
+          <p>Sou desenvolvedor Java com 6 meses de experiência e estudante de Ciência da Computação. 
+            Durante minha jornada, participei de maratonas de programação, onde desenvolvi fortes habilidades em algoritmos. 
+            Concluí diversos projetos de diferentes níveis de complexidade, que você pode ver abaixo. 
+            Além disso, sou formado em um curso técnico de Automação Industrial.</p>
+          <br>
+          <p style="margin-bottom: 0;">
+            Um jovem apaixonado por música japonesa e por animes. Um guitarrista em horas vagas. <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.pinimg.com%2Foriginals%2F4d%2F71%2Fcc%2F4d71cc92aef3a373e438af8d11ff5efb.jpg&f=1&nofb=1&ipt=1d65cb30ca1842a94602e09f93f5aa8691216e15f94dec3e2cb50462dd27d6e5&ipo=images" alt="Beck mongolian chop squad meu anime favorito">
+        </p>
+        
         </section>
       
         <section class="projects">
             <h2>Projetos</h2>
             <div class="project-list">
                 <p>Em breve, mais projetos estarão disponíveis!</p>
+                <br>
+                <br>
+                <br>
             </div>
         </section>
     </main>
